[gd_scene load_steps=10 format=3 uid="uid://baxaji6xuxohv"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_hhpbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg8bh"]
size = Vector2(8.28571, 24.2857)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jj0wa"]
radius = 4.0
height = 22.4

[sub_resource type="SphereMesh" id="SphereMesh_si2ev"]

[sub_resource type="BoxMesh" id="BoxMesh_h71wy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gbdo"]
size = Vector2(8.85714, 9.42857)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgbgs"]
size = Vector2(32, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44aa6"]
size = Vector2(43, 10.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iifnm"]
size = Vector2(14, 34.5)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_hhpbu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.500001, -3.5)
scale = Vector2(3.5, 3.5)
shape = SubResource("RectangleShape2D_rg8bh")
disabled = true

[node name="body" type="MeshInstance2D" parent="."]
modulate = Color(0.898039, 0.0470588, 0.137255, 1)
scale = Vector2(3.5, 3.5)
mesh = SubResource("CapsuleMesh_jj0wa")

[node name="head" type="Node2D" parent="."]
position = Vector2(0, -31)

[node name="GunPosition" type="Node2D" parent="head"]
position = Vector2(48, 25)

[node name="GunRemoteTransformPosition" type="RemoteTransform2D" parent="head/GunPosition"]

[node name="face" type="MeshInstance2D" parent="head"]
modulate = Color(0.898039, 0.0470588, 0.137255, 1)
scale = Vector2(30, 30)
mesh = SubResource("SphereMesh_si2ev")

[node name="goggles" type="MeshInstance2D" parent="head"]
modulate = Color(0, 0, 0, 1)
position = Vector2(10, -4)
scale = Vector2(20, 5.323)
mesh = SubResource("BoxMesh_h71wy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -35.0
offset_top = -77.0
offset_right = 40.0
offset_bottom = -66.0
color = Color(0.898039, 0.0470588, 0.137255, 1)

[node name="detectors" type="Node2D" parent="."]

[node name="body_detector" type="Area2D" parent="detectors"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectors/body_detector"]
position = Vector2(0.5, -3.5)
scale = Vector2(3.5, 3.5)
shape = SubResource("RectangleShape2D_4gbdo")

[node name="head_detector" type="Area2D" parent="detectors"]
position = Vector2(0, -33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectors/head_detector"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_mgbgs")

[node name="hand_detector" type="Area2D" parent="detectors"]
position = Vector2(30, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectors/hand_detector"]
shape = SubResource("RectangleShape2D_44aa6")

[node name="hand_detector2" type="Area2D" parent="detectors"]
position = Vector2(23, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectors/hand_detector2"]
shape = SubResource("RectangleShape2D_44aa6")

[node name="leg_detectors" type="Area2D" parent="detectors"]
position = Vector2(12, 26)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="detectors/leg_detectors"]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_iifnm")

[node name="leg_detectors2" type="Area2D" parent="detectors"]
position = Vector2(-6, 30)
scale = Vector2(0.967065, 1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="detectors/leg_detectors2"]
position = Vector2(-2.06811, 0)
shape = SubResource("RectangleShape2D_iifnm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-14, -43, -14, 13, -14, 47, -3, 47, -2, 47, -2, 13, 5, 13, 5, 47, 17, 47, 17, 13, 15, 13, 15, -2, 50, -2, 50, -10, 43, -10, 43, -17, 12, -17, 13, -43)

[connection signal="body_entered" from="detectors/body_detector" to="." method="_on_body_detector_body_entered"]
[connection signal="body_entered" from="detectors/body_detector" to="." method="_on_attack_detection_body_entered"]
[connection signal="body_entered" from="detectors/head_detector" to="." method="_on_head_detector_body_entered"]
[connection signal="body_entered" from="detectors/hand_detector" to="." method="_on_hand_detector_body_entered"]
[connection signal="body_entered" from="detectors/hand_detector2" to="." method="_on_hand_detector_body_entered"]
[connection signal="body_entered" from="detectors/leg_detectors" to="." method="_on_leg_detectors_body_entered"]
[connection signal="body_entered" from="detectors/leg_detectors2" to="." method="_on_leg_detectors_2_body_entered"]
